--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -2,13 +2,35 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a class="search-link pull-right" (click)="toggleSearch()">
+      <span *ngIf="iptSearch.value">
+        <small>"{{iptSearch.value}}"</small>
+      </span>
+      <i class="fa fa-search"></i>
+    </a>
   </h1>
+
+  <div class="row">
+    <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
+      <form [formGroup]="searchForm">
+        <div class="form-group">
+          <input type="text" #iptSearch formControlName="searchControl" class="form-control" placeholder="Digite o nome do restaurante">
+        </div>
+      </form>
+    </div>
+  </div>
+
 </section>
 
 <section class="content">
   <div class="row">
     <div *ngFor="let restaurante of restaurantes" class="col-sm-6 col-xs-12">
       <mt-restaurante [restaurante]="restaurante"></mt-restaurante>
+    </div>
+    <div *ngIf="restaurantes?.length ===0" class="col-xs-12">
+      <p class="lead text-center">
+        Não foram encontrados itens para sua busca!
+      </p>
     </div>
   </div>
 </section>
